[gd_scene load_steps=24 format=2]

[ext_resource path="res://Games/TheFallen/Assets/Layers/3.png" type="Texture" id=1]
[ext_resource path="res://Games/TheFallen/Assets/Layers/5.png" type="Texture" id=2]
[ext_resource path="res://Games/TheFallen/Assets/Layers/1.png" type="Texture" id=3]
[ext_resource path="res://Games/TheFallen/Assets/Layers/2.png" type="Texture" id=4]
[ext_resource path="res://Games/TheFallen/Assets/Layers/4.png" type="Texture" id=5]
[ext_resource path="res://Games/TheFallen/Assets/Layers/8.png" type="Texture" id=6]
[ext_resource path="res://Games/TheFallen/Assets/Layers/7.png" type="Texture" id=7]
[ext_resource path="res://Games/TheFallen/Assets/Layers/6.png" type="Texture" id=8]
[ext_resource path="res://Fonts/Harting_plain.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Games/TheFallen/TheFallenWaiting.gd" type="Script" id=10]
[ext_resource path="res://Games/TheFallen/427400__imjeax__forest-ambient-loop.wav" type="AudioStream" id=11]
[ext_resource path="res://Games/TheFallen/typewriter.ogg" type="AudioStream" id=12]
[ext_resource path="res://Fonts/slkscrb.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://Games/TheFallen/sketch4.ogg" type="AudioStream" id=14]
[ext_resource path="res://Fonts/m5x7.ttf" type="DynamicFontData" id=15]

[sub_resource type="Animation" id=1]
resource_name = "Fade To Night"
length = 15.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.00784314, 0, 0.0196078, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/ColorRect:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.00784314, 0.00392157, 0.105882, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/title:text")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.7, 2.8, 2.9, 3, 3.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "", "N", "Ni", "Nig", "Nigh", "Night", "Night F", "Night Fa", "Night Fal", "Night Fall", "Night Falls" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/title:custom_colors/font_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 11.06, 12 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0.00784314, 0.00392157, 0.105882, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MusicPlayer:volume_db")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -5.42 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("SFX:volume_db")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 2.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 5.049, -80.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Music2:volume_db")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 2.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -8.077, -80.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Music2:playing")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 2.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("SFX:playing")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 2.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("MusicPlayer:playing")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 12 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
length = 4.6
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/title:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.9, 1.7, 2, 2.2, 2.6, 3.5, 3.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "", "T", "Th", "The", "The F", "The Fa", "The Fal", "The Fall", "The Falle", "The Fallen" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/title:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9, 3.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0.635294, 0.180392, 0.180392, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SFX:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 4.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("infos:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Music2:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 4.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MusicPlayer:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath(".:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("infos:text")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "" ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Music2:volume_db")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -8.077 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("MusicPlayer:volume_db")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -5.42 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("SFX:volume_db")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 5.049 ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/title:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "The Fallen" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/title:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("infos:text")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "" ]
}

[sub_resource type="Animation" id=4]
length = 45.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("fore/11:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.04, 20, 25, 45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1843.93, 277.315 ), Vector2( 803.935, 277.315 ), Vector2( 803.935, 277.315 ), Vector2( 1843.93, 277.315 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fore/10:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.04, 20, 25, 45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1067.93, 269.315 ), Vector2( 27.9349, 269.315 ), Vector2( 27.9349, 269.315 ), Vector2( 1067.93, 269.315 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("fore/9:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.04, 20, 25, 45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 331.935, 295.315 ), Vector2( -708.065, 295.315 ), Vector2( -708.065, 295.315 ), Vector2( 331.935, 295.315 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("fore/7:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.04, 20, 25, 45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 545.266, 181.033 ), Vector2( -494.734, 181.033 ), Vector2( -494.734, 181.033 ), Vector2( 545.266, 181.033 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("fore/8:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.04, 20, 25, 45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1625.27, 177.033 ), Vector2( 585.266, 177.033 ), Vector2( 585.266, 177.033 ), Vector2( 1625.27, 177.033 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("back/3:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 20, 25, 45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 578.437, 286.961 ), Vector2( 510.437, 286.961 ), Vector2( 510.437, 286.961 ), Vector2( 578.437, 286.961 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("back/4:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 20, 25, 45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 616.313, 242.24 ), Vector2( 480.313, 242.24 ), Vector2( 480.313, 242.24 ), Vector2( 616.313, 242.24 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("back/5:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 20, 25, 45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 639.238, 255.656 ), Vector2( 447.238, 255.656 ), Vector2( 447.238, 255.656 ), Vector2( 639.238, 255.656 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("../infos:text")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 20, 32.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "", "any day now...", "ANY DAY NOW :)" ]
}

[sub_resource type="Animation" id=5]
length = 18.0
tracks/0/type = "value"
tracks/0/path = NodePath("infos:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 6, 9, 12, 15, 18 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "Players Have Been Given THeir Roles", "Players will wake up one at a time 
and do their actions.", "At the end of the night,
players will vote to kill somebody", "The TOwn wins if they kill a fallen
If they fail to do so, the fallen win.
", "Some unique cards may also have
 their own win conditions.", "Players can tap their charachter portrait
to read a short description of their given role", "Waiting for all players to be ready" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("infos:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=8]
size = 95
font_data = ExtResource( 9 )

[node name="root" type="Node2D"]
position = Vector2( -8.11871, 0 )
script = ExtResource( 10 )

[node name="TitleAnim" type="AnimationPlayer" parent="."]
"anims/Fade To Night" = SubResource( 1 )
anims/Intro = SubResource( 2 )
anims/Quiet = SubResource( 3 )

[node name="background" type="Node2D" parent="."]

[node name="animatedbackground" type="AnimationPlayer" parent="background"]
autoplay = "scrolling"
playback_speed = 0.2
anims/scrolling = SubResource( 4 )

[node name="back" type="Node2D" parent="background"]

[node name="1" type="Sprite" parent="background/back"]
modulate = Color( 0.337255, 0.337255, 0.337255, 1 )
position = Vector2( 541.269, 301.13 )
scale = Vector2( 0.544392, 0.580026 )
texture = ExtResource( 3 )

[node name="2" type="Sprite" parent="background/back"]
position = Vector2( 575.986, 303.851 )
scale = Vector2( 0.6, 0.585 )
texture = ExtResource( 4 )

[node name="3" type="Sprite" parent="background/back"]
position = Vector2( 578.437, 286.961 )
scale = Vector2( 0.582416, 0.582416 )
texture = ExtResource( 1 )

[node name="4" type="Sprite" parent="background/back"]
position = Vector2( 616.313, 242.24 )
scale = Vector2( 0.617004, 0.627007 )
texture = ExtResource( 5 )

[node name="5" type="Sprite" parent="background/back"]
position = Vector2( 639.238, 255.656 )
scale = Vector2( 0.648845, 0.648845 )
texture = ExtResource( 2 )

[node name="fore" type="Node2D" parent="background"]

[node name="6" type="Sprite" parent="background/fore"]
position = Vector2( 552.209, 309.222 )
scale = Vector2( 0.567413, 0.567413 )
texture = ExtResource( 8 )

[node name="7" type="Sprite" parent="background/fore"]
position = Vector2( 545.266, 181.033 )
scale = Vector2( 0.549669, 0.791457 )
texture = ExtResource( 7 )

[node name="8" type="Sprite" parent="background/fore"]
position = Vector2( 1625.27, 177.033 )
scale = Vector2( 0.549669, 0.791457 )
texture = ExtResource( 7 )

[node name="9" type="Sprite" parent="background/fore"]
position = Vector2( 331.935, 295.315 )
scale = Vector2( 0.347309, 0.347309 )
z_index = 1
texture = ExtResource( 6 )

[node name="10" type="Sprite" parent="background/fore"]
position = Vector2( 1067.93, 269.315 )
scale = Vector2( 0.347309, 0.347309 )
z_index = 1
texture = ExtResource( 6 )

[node name="11" type="Sprite" parent="background/fore"]
position = Vector2( 1843.93, 277.315 )
scale = Vector2( 0.347309, 0.347309 )
z_index = 1
texture = ExtResource( 6 )

[node name="SFX" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 182.99, 331.369 )
stream = ExtResource( 12 )
volume_db = 5.049

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -5.42

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.5
anims/Passive = SubResource( 5 )

[node name="infos" type="Label" parent="."]
margin_left = 8.49829
margin_top = 517.0
margin_right = 1086.5
margin_bottom = 546.0
custom_fonts/font = SubResource( 6 )
text = "Players Have Been Given THeir Roles"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -8.077

[node name="Readyplayers" type="Label" parent="."]
margin_left = 854.608
margin_top = 11.3244
margin_right = 1080.61
margin_bottom = 35.3244
custom_fonts/font = SubResource( 7 )
text = "0/11 players are ready"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
margin_left = -13.1187
margin_top = -8.0
margin_right = 1082.88
margin_bottom = 612.0
color = Color( 0.00784314, 0.00392157, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="CanvasLayer"]
margin_left = 250.32
margin_right = 832.32
margin_bottom = 418.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="animation_finished" from="TitleAnim" to="." method="_on_TitleAnim_animation_finished"]
